Create a main Data.VHD module.

--- a/vhd.cabal
+++ b/vhd.cabal
@@ -9,4 +9,4 @@ Cabal-version:       >=1.2
 
 Library
     Build-depends:       base > 4.0, bytestring, cereal
-    Exposed-modules:     Data.VHD.Disk
+    Exposed-modules:     Data.VHD
