--- a/vhd.cabal
+++ b/vhd.cabal
@@ -11,5 +11,8 @@ Build-type:          Simple
 Cabal-version:       >=1.2
 
 Library
-    Build-depends:       base > 4.0, bytestring, cereal
-    Exposed-modules:     Data.VHD
+  Build-depends:     base >= 4 && < 5
+                   , bytestring
+                   , cereal
+  Exposed-modules:   Data.VHD
+
