--- a/vhd.cabal
+++ b/vhd.cabal
@@ -8,7 +8,9 @@ License-file:        LICENCE
 Stability:           Experimental
 Category:            System
 Build-type:          Simple
+Homepage:            https://github.com/jonathanknowles/hs-vhd
 Cabal-version:       >=1.2
+Data-files:          README
 
 Library
   Build-depends:     base >= 4 && < 5
