--- a/vhd.cabal
+++ b/vhd.cabal
@@ -12,12 +12,27 @@ Homepage:            https://github.com/jonathanknowles/hs-vhd
 Cabal-version:       >=1.6
 Data-files:          README
 
+Flag test
+  Description:       Build unit test
+  Default:           False
+
 Library
   Build-depends:     base >= 4 && < 5
                    , bytestring
                    , cereal
   Exposed-modules:   Data.VHD
 
+Executable           Tests
+  Main-Is:           Tests.hs
+  if flag(test)
+    Buildable:       True
+    Build-depends:   base >= 3 && < 5
+                   , QuickCheck >= 2
+                   , bytestring
+                   , test-framework >= 0.3
+                   , test-framework-quickcheck2 >= 0.2
+  else
+    Buildable:       False
 
 source-repository head
   type:     git
