--- a/vhd.cabal
+++ b/vhd.cabal
@@ -20,6 +20,7 @@ Library
   Build-depends:     base >= 4 && < 5
                    , bytestring
                    , cereal
+                   , vector
   Exposed-modules:   Data.VHD
 
 Executable           Tests
