--- a/vhd.cabal
+++ b/vhd.cabal
@@ -16,6 +16,10 @@ Flag test
   Description:       Build unit test
   Default:           False
 
+Flag executable
+  Description:       Build executables
+  Default:           False
+
 Library
   Build-depends:     base >= 4 && < 5
                    , bytestring
@@ -32,6 +36,14 @@ Executable           Tests
                    , bytestring
                    , test-framework >= 0.3
                    , test-framework-quickcheck2 >= 0.2
+  else
+    Buildable:       False
+
+Executable           vhd
+  Main-Is:           Vhd.hs
+  if flag(executable)
+    Buildable:       True
+    Build-depends:   base >= 3 && < 5
   else
     Buildable:       False
 
