--- a/vhd.cabal
+++ b/vhd.cabal
@@ -23,8 +23,9 @@ Flag executable
 Library
   Build-depends:     base >= 4 && < 5
                    , bytestring
+                   , mmap
                    , cereal
-                   , vector
+                   , storable-endian
   Exposed-modules:   Data.VHD
 
 Executable           Tests
