--- a/vhd.cabal
+++ b/vhd.cabal
@@ -24,6 +24,7 @@ Library
   Build-depends:     base >= 4 && < 5
                    , bytestring
                    , mmap
+                   , time
                    , cereal
                    , storable-endian
   Exposed-modules:   Data.VHD
