Add function randomUniqueId and use it to generate a unique ID when creating a new VHD.

--- a/vhd.cabal
+++ b/vhd.cabal
@@ -26,6 +26,7 @@ Library
                    , mmap
                    , time
                    , cereal
+                   , random
                    , storable-endian
   Exposed-modules:   Data.VHD
 
