properly encode and decode utf16 filepath in parent filepath.

--- a/vhd.cabal
+++ b/vhd.cabal
@@ -24,6 +24,7 @@ Library
   Build-depends:     base >= 4 && < 5
                    , bytestring
                    , mmap
+                   , text
                    , time
                    , cereal
                    , random
