add myself as author.

--- a/vhd.cabal
+++ b/vhd.cabal
@@ -1,6 +1,6 @@
 Name:                vhd
 Version:             0.1
-Author:              Jonathan Knowles
+Author:              Jonathan Knowles, Vincent Hanquez
 Maintainer:          jonathan.knowles@eu.citrix.com
 Copyright:           Citrix Systems Inc.
 License:             BSD3
