--- a/vhd.cabal
+++ b/vhd.cabal
@@ -25,6 +25,7 @@ Flag executable
 Library
   Build-depends:     base >= 4 && < 5
                    , bytestring
+                   , filepath
                    , mmap
                    , text
                    , time
