--- a/vhd.cabal
+++ b/vhd.cabal
@@ -34,6 +34,7 @@ Library
                    , storable-endian
   Exposed-modules:   Data.Vhd
   Other-modules:     Data.BitSet
+                     Data.Range
                      Data.Vhd.Bat
                      Data.Vhd.Bitmap
                      Data.Vhd.Block
